--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "sick-fits",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "^5.3.0"
-  },
-  "devDependencies": {
-    "eslint": "7.31.0",
-    "eslint-config-next": "11.0.1"
-  }
+    "name": "sick-fits",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev -p 7777",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "next": "11.0.1",
+        "nprogress": "^0.2.0",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "styled-components": "^5.3.0"
+    },
+    "devDependencies": {
+        "babel-plugin-styled-components": "^1.13.2",
+        "eslint": "7.31.0",
+        "eslint-config-next": "11.0.1"
+    }
 }
