--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@apollo/client": "^3.4.6",
+        "@apollo/link-error": "^2.0.0-beta.3",
+        "@apollo/react-ssr": "^4.0.0",
+        "@stripe/react-stripe-js": "^1.4.1",
+        "@stripe/stripe-js": "^1.16.0",
+        "apollo-upload-client": "^16.0.0",
         "next": "11.0.1",
+        "next-with-apollo": "^5.2.1",
         "nprogress": "^0.2.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
